--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .conteiner {
-    max-width: 1440px;
-    width: 100%;
-    height: 1351px;
-    background-color: rgba(242, 245, 248, 1); 
+        max-width: 1440px;
+        width: 100%;
+        margin: 0 auto;
+        background-color: #F2F5F8;
 }
 
 header {
