--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
         max-width: 1440px;
         width: 100%;
         margin: 0 auto;
-        background-color: #F2F5F8;
+        background-color: #6c6e71;
 }
 
 header {
