--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 header {
     width: 100%;
-    background-color: white;
+    background-color: rgb(49, 45, 45);
     align-items: center;
     display: flex;
     padding: 44px 98px 79px 98px;
