--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
         max-width: 1440px;
         width: 100%;
         margin: 0 auto;
-        background-color: #6c6e71;
+        background: rgba(242, 245, 248, 1);
 }
 
 header {
     width: 100%;
-    background-color: rgb(49, 45, 45);
+    background-color: rgb(255, 255, 255);
     align-items: center;
     display: flex;
     padding: 44px 98px 79px 98px;
