--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,9 @@
         margin: 0 auto;
         background: rgba(242, 245, 248, 1);
 }
-
 header {
     width: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color:aliceblue;
     align-items: center;
     display: flex;
     padding: 44px 98px 79px 98px;
