--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 .conteiner {
-        max-width: 1440px;
-        width: 100%;
-        margin: 0 auto;
-        background-color: #F2F5F8;
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #F2F5F8;
 }
+
 header {
     width: 100%;
     align-items: center;
@@ -19,16 +20,22 @@ ul {
     font-family: Ubuntu;
     font-size: 24px;
     font-weight: 500;
-    color:rgba(129, 114, 213, 1)
-    
+    color: rgba(129, 114, 213, 1)
 }
 
 section {
     width: 90%;
-   padding-left: 95px;
+    padding-left: 98px;
 }
 
 h1 {
     color: rgba(34, 88, 87, 1);
+    padding: 52px 1110px 69px 98px;
+    height: 37px;
+    width: 232px;
+    left: 98px;
+    top: 212px;
+    border-radius: nullpx;
+
 
 }
