--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,6 @@ h1 {
     color: rgba(34, 88, 87, 1);
     padding: 52px 1110px 69px 98px;
     height: 37px;
-    width: 232px;
-    left: 98px;
-    top: 212px;
+    font-size: 32px;
 }
 
