--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,15 @@ header {
     justify-content: space-between;
 }
 
+.logo {
+    padding: 44px 521px 79px 98px;
+}
+
 ul {
     gap: 91px;
     display: flex;
     font-size: 24px;
-    font-family: Ubuntu;
+    font-family: Ubuntu ;
     font-size: 24px;
     font-weight: 500;
     color: rgba(129, 114, 213, 1)
@@ -29,7 +33,6 @@ section {
 
 h1 {
     color: rgba(34, 88, 87, 1);
- 
     font-size: 32px;
 }
 
