--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,10 @@ ul {
     gap: 91px;
     display: flex;
     font-size: 24px;
-    font-family: Ubuntu ;
     font-size: 24px;
     font-weight: 500;
-    color: rgba(129, 114, 213, 1)
+    color: rgba(129, 114, 213, 1);
+    font-family: 'Ubuntu', sans-serif;
 }
 
 section {
