--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ p {
     width: 90%;
     font-weight: 500;
     font-size: 32px;
-    background: rgba(34, 88, 87, 1);
+    color:  rgba(19, 59, 58, 1);
     font-family: 'Ubuntu', sans-serif;
     
 }
