--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,12 @@ h1 {
 
 p {
     width: 90%;
+    height: 81px;
     font-weight: 500;
     font-size: 32px;
-    color:  rgba(19, 59, 58, 1);
+    color: #133B3A;
     font-family: 'Ubuntu', sans-serif;
+    margin-top: 33px;
     
 }
 
