--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,22 @@ ul {
 }
 
    /*section*/
-section {
+   section {
     width: 90%;
+    /* display: flex; */
+    /* padding: 98px 50px 96px 97px; */
     padding-left: 98px;
 }
 
 h1 {
-    color: rgba(34, 88, 87, 1);
+    color: #225857;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
     font-size: 32px;
+    /* display: flex; */
     margin-bottom: 60px;
+
+
 }
 
 .sixcard {
@@ -54,9 +60,9 @@ h1 {
 
 
 
- img {
+.cards img {
     width: 90%;
-   
+    height: 188px;
 }
 
 p {
@@ -67,19 +73,26 @@ p {
     color: #133B3A;
     font-family: 'Ubuntu', sans-serif;
     margin-top: 33px;
-    
 }
 
-  /*footer*/
+
+
+/* FOOTER */
+
 footer {
     width: 100%;
-   display: flex;
-   background-color: rgba(117, 139, 253, 1);
-   align-items: center;
-} 
+    display: flex;
+    align-items: center;
+    padding: 44px 98px 79px 98px;
+    justify-content: space-between;
+    background-color: #758BFD;
+}
+
+
 
 .search {
-    display: flex; 
+    display: flex;
+    color: #9747FF;
     gap: 91px;
     font-size: 50px;
     width: 440px;
@@ -88,10 +101,8 @@ footer {
     border-radius: 10px;
     justify-content: flex-end;
     align-items: center;
-    color: #9747FF;
+
 }
-
-
 
 
 
