--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,9 @@ p {
     font-family: 'Ubuntu', sans-serif;
     margin-top: 33px;
 }
+
+footer {
+    width: 100%;
+    height: 140px;
+    background: rgba(117, 139, 253, 1);
+}
