--- a/css/style.css
+++ b/css/style.css
@@ -78,4 +78,20 @@ footer {
     width: 100%;
     height: 140px;
     background: rgba(117, 139, 253, 1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search {
+    display: flex;
+    color: #9747FF;
+    gap: 91px;
+    font-size: 50px;
+    width: 440px;
+    height: 64px;
+    border-radius: 10px;
+    justify-content: flex-end;
+    align-items: center;
+     background-color: #F2F5F8;
 }
