--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ footer {
     padding: 44px 98px 79px 98px;
 }
 
+.fphoto {
+    padding: 59px 690px 44px 97px;
+}
+
 .search {
     display: flex;
     color: #9747FF;
@@ -95,4 +99,5 @@ footer {
     justify-content: flex-end;
     align-items: center;
     background-color: #F2F5F8;
+    pad
 }
